src/components/UI/styles.scss
.wrapper {
	width: 100%;
	height: 100%;
	position: fixed;
	top: 0;
	left: 0;
	&.interactable {
		pointer-events: all;
	}
	&.uninteractable {
		pointer-events: none;
	}
}
	.score {
		min-width: calc(var(--size__font__heading) * 8);
		padding: 1em 2.62em;
		position: absolute;
		top: 0;
		right: 0;
		text-align: right;
	}
		.title {
			text-align: right;
			font-size: var(--size__font__heading);
		}
		.scorables {
			font-size: var(--size__font__subheading);
		}
			.attribute {
				display: flex;
			}
				.key {
					flex: 1 0 75%;
					text-align: right;
					margin-right: 1em;
					&:after {
						content: ":"
					}
				}
				.value {
					flex: 1 0 auto;
					text-align: right;
				}
	.message {
		display: flex;
		height: 100%;
		width: 100%;
		justify-content: center;
		align-items: center;
		flex-direction: column;
		text-align: center;
		&.animation__0 {
			animation: fadeInOut 1.6s both;
		}
		&.animation__1 {
			animation: fadeOutIn 1.6s both;
		}
		&.gameOver {
			animation: fadeIn 1s both;
		}
		.title {
			font-size: 10vh;
		}
		.body {
			font-size: var(--size__font__heading);
		}
		.replay {
			padding: 0.62em 1em;
			border: 0.1em solid #222;
			border-radius: 0.5em;
			margin-top: 1em;
			appearance: none;
			background-color: transparent;
			transition: background-color .15s, color .15s;
			&:hover
			&:focus {
				background-color: #222;
				color: #fff;
				cursor: pointer;
			}
			&:active {
				outline: 0;
			}
		}
	}

@keyframes fadeInOut {
	0%, 100% {
		opacity: 0;
	}
	25%, 50% {
		opacity:  1
	}
}

@keyframes fadeOutIn {
	0%, 100% {
		opacity: 0;
	}
	25%, 50% {
		opacity:  1
	}
}

@keyframes fadeIn {
	from {
		opacity: 0
	}
	to {
		opacity: 1;
	}
}

